tester/testsuite/good/double_comp.jl
int main() {
    double x = 1.0;
    if (x <  1.0) printInt(0);
    if (x <= 1.0) printInt(1);
    if (x >  1.0) printInt(2);
    if (x >= 1.0) printInt(3);
    return 0;
}
