tester/testsuite/bad/inc_dec_array2.jl
int main() {
    double [] b = new double[1];
    b[0]++;
    return 0;
}
